force-app/main/default/objects/Feature_Flag__mdt/Feature_Flag__mdt.object-meta.xml
<CustomObject>
    <description>Used to turn on/off certain features. If no flag exists for the feature key, the system defaults to &quot;on&quot;.</description>
    <label>Feature Flag</label>
    <pluralLabel>Feature Flags</pluralLabel>
</CustomObject>