force-app/main/default/objects/Feature_Flag__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether or not this feature is turned on.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>