force-app/main/default/objects/Feature_Flag__mdt/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>A date representing the &quot;start&quot; date of the feature. It is up to the developer to determine what date to check against (a record&apos;s created date, today&apos;s date, etc.).</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>