force-app/main/default/objects/Feature_Flag__mdt/fields/Values_to_Allow__c.field-meta.xml
<CustomField>
    <fullName>Values_to_Allow__c</fullName>
    <description>A semi-colon delimited list of values to allow. ex: email, Account name, etc. If there is a value in this field, the feature will ONLY be on for these given values.</description>
    <inlineHelpText>A semi-colon delimited list of values to allow. ex: email, Account name, etc. If there is a value in this field, the feature will ONLY be on for these given values.</inlineHelpText>
    <label>Values to Allow</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>